feat: add waiting notes and duplicate case locations
